[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Train.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Car.gd" type="Script" id=2]
[ext_resource path="res://Assets/Car.png" type="Texture" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]

[sub_resource type="ParticlesMaterial" id=1]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 90.0
flatness = 0.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.0
angular_velocity = 45.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 0.2
scale_random = 0.11
color = Color( 1, 1, 1, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angle", "Angular Velocity", "Animation", "Color", "Damping", "Emission Shape", "Flags", "Gravity", "Hue Variation", "Initial Velocity", "Linear Accel", "Orbit Velocity", "Radial Accel", "Resource", "Scale", "Spread", "Tangential Accel", "Trail" ]

[node name="Train" type="Node2D" groups=[
"train",
]]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
car_mass = 4.5

[node name="Car1" type="RigidBody2D" parent="." index="0" groups=[
"train",
]]

input_pickable = false
collision_layer = 1
collision_mask = 1
mode = 0
mass = 6.0
friction = 0.9
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 2 )
_sections_unfolded = [ "Angular", "Applied Forces", "Collision", "Material", "Transform", "Visibility", "Z Index" ]
passengers = 1000
open_end = -1
passenger_tick = 1

[node name="Sprite" type="Sprite" parent="Car1" index="0"]

scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Animation", "Offset", "Region", "Transform" ]

[node name="Passengers" type="Particles2D" parent="Car1" index="1"]

position = Vector2( -52.4493, -0.074585 )
scale = Vector2( 0.114976, 0.237121 )
z_index = -1
emitting = false
amount = 3
lifetime = 2.0
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 1 )
texture = ExtResource( 4 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time", "Z Index" ]

[node name="Polygon2D" type="CollisionPolygon2D" parent="Car1" index="2"]

build_mode = 0
polygon = PoolVector2Array( -34.9463, 12.815, -39.7643, 12.5447, -42.1716, 2.99826, -39.6473, 1.36538, -45.186, -7.07049, -44.3339, -10.3085, -39.3917, -10.8198, -34.1938, -16.188, 38.7034, -16.3502, 44.1612, -10.4497, 49.64, -9.78564, 49.889, -7.12924, 46.6575, 1.3257, 46.9006, 3.41332, 44.4932, 13.2088, 22.744, 18.1065, -0.772827, 17.5286, -22.3317, 17.7744 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="PinJoint2D" type="PinJoint2D" parent="." index="1"]

position = Vector2( 53.8155, 3.6 )
node_a = NodePath("../Car1")
node_b = NodePath("../Car2")
bias = 0.7
disable_collision = false
softness = 0.0
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="Car2" type="RigidBody2D" parent="." index="2" groups=[
"train",
]]

position = Vector2( 103.173, 0 )
input_pickable = false
collision_layer = 1
collision_mask = 1
mode = 0
mass = 6.0
friction = 0.9
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 2 )
_sections_unfolded = [ "Collision", "Pause", "Transform" ]
passengers = 1000
open_end = 0
passenger_tick = 1

[node name="Sprite" type="Sprite" parent="Car2" index="0"]

scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Animation", "Offset", "Region", "Transform" ]

[node name="Polygon2D2" type="CollisionPolygon2D" parent="Car2" index="1"]

build_mode = 0
polygon = PoolVector2Array( -34.9463, 12.815, -39.7643, 12.5447, -42.1716, 2.99826, -39.6473, 1.36538, -45.186, -7.07049, -44.3339, -10.3085, -39.3917, -10.8198, -34.1938, -16.188, 38.7034, -16.3502, 44.1612, -10.4497, 49.64, -9.78564, 49.889, -7.12924, 46.6575, 1.3257, 46.9006, 3.41332, 44.4932, 13.2088, 22.744, 18.1065, -0.772827, 17.5286, -22.3317, 17.7744 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="PinJoint2D2" type="PinJoint2D" parent="." index="3"]

position = Vector2( 157.231, 3.6 )
node_a = NodePath("../Car2")
node_b = NodePath("../Car3")
bias = 0.7
disable_collision = false
softness = 0.0
_sections_unfolded = [ "Transform" ]

[node name="Car3" type="RigidBody2D" parent="." index="4" groups=[
"train",
]]

position = Vector2( 206.353, 0 )
input_pickable = false
collision_layer = 1
collision_mask = 1
mode = 0
mass = 6.0
friction = 0.9
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 2 )
_sections_unfolded = [ "Collision", "Linear", "Transform", "Z Index" ]
passengers = 1000
open_end = 1
passenger_tick = 1

[node name="Sprite" type="Sprite" parent="Car3" index="0"]

scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Animation", "Offset", "Region", "Transform" ]

[node name="Passengers" type="Particles2D" parent="Car3" index="1"]

position = Vector2( 51.2833, 0.596848 )
scale = Vector2( 0.114976, 0.237121 )
z_index = -1
emitting = false
amount = 3
lifetime = 2.0
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 1 )
texture = ExtResource( 4 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time", "Z Index" ]

[node name="Polygon2D2" type="CollisionPolygon2D" parent="Car3" index="2"]

build_mode = 0
polygon = PoolVector2Array( -34.9463, 12.815, -39.7643, 12.5447, -42.1716, 2.99826, -39.6473, 1.36538, -45.186, -7.07049, -44.3339, -10.3085, -39.3917, -10.8198, -34.1938, -16.188, 38.7034, -16.3502, 44.1612, -10.4497, 49.64, -9.78564, 49.889, -7.12924, 46.6575, 1.3257, 46.9006, 3.41332, 44.4932, 13.2088, 22.744, 18.1065, -0.772827, 17.5286, -22.3317, 17.7744 )
_sections_unfolded = [ "Transform", "Z Index" ]


